ddetect (0.84) UNRELEASED; urgency=low

  * Per Olofsson
    - List PCMCIA network interfaces in /etc/network/devhotplug and load
      modules for Cardbus cards in a temporary hotplug agent.

 -- Per Olofsson <pelle@dsv.su.se>  Fri,  9 Apr 2004 21:38:49 +0200

ddetect (0.83) unstable; urgency=low

  * Martin Michlmayr
    - Added support for MIPS based Cobalt machines as mipsel/cobalt.
  * Joey Hess
    - Remove the hw-detect/detect_progress_title template, it should no
      longer be used as everything is switched to custom titles, and this
      regains some space. As a fallback just in case, use
      hw-detect/load_progress_step.
  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach

 -- Joey Hess <joeyh@debian.org>  Sun,  4 Apr 2004 16:02:37 -0400

ddetect (0.82) unstable; urgency=low

  * On powerpc, always try to load the airport driver, which discover cannot
    detect. Closes: #221533
  * Updated translations: 
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Spanish (Castilian) (es.po) by Javier FernÃ¡ndez-Sanguino
    - French (fr.po) by Christian Perrier
    - Hungarian (hu.po) by VERÃK IstvÃ¡n
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by KÄstutis BiliÅ«nas
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by AndrÃ© LuÃ­s Lopes
    - Russian (ru.po) by Nikolai Prokoschenko
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Slovenian (sl.po) by Jure Äuhalev
    - Swedish (sv.po) by AndrÃ© Dahlqvist
    - Turkish (tr.po) by Osman YÃ¼ksel
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu
