@@ -3,6 +3,9 @@ ddetect (0.84) UNRELEASED; urgency=low
   * Per Olofsson
     - List PCMCIA network interfaces in /etc/network/devhotplug and load
       modules for Cardbus cards in a temporary hotplug agent.
+  * Martin Michlmayr
+    - Detect Cobalt machines running new kernels (which identify the
+      exact machine in /proc/cpuinfo rather than just "MIPS Cobalt").
 
  -- Per Olofsson <pelle@dsv.su.se>  Fri,  9 Apr 2004 21:38:49 +0200
 
